overflow issue resolved on mobile

--- a/index.css
+++ b/index.css
@@ -57,7 +57,7 @@ body,
 html {
   box-sizing: border-box;
   font-family: 'Noto Sans', sans-serif;
-  font-weight: 700;
+  font-weight: 400;
   font-size: 1.5rem;
   /* min-width: 400px; */
   width: 100%;
